--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,11 @@
-antiorm==1.2.1
-beautifulsoup4==4.9.1
+beautifulsoup4==4.9.0
 bs4==0.0.1
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.2
 confusables==1.1.1
-db==0.1.1
-db-sqlite3==0.0.1
-decorator==4.4.2
-gevent==20.5.2
-greenlet==0.4.15
 grequests==0.6.0
-idna==2.9
-joblib==0.14.1
 langdetect==1.0.8
-nltk==3.5
-regex==2020.5.14
 requests==2.23.0
-six==1.15.0
-soupsieve==2.0.1
 textblob==0.15.3
-tqdm==4.46.0
-urllib3==1.25.9
 validators==0.15.0
-zope.event==4.4
-zope.interface==5.1.0
+ipaddress==1.0.23
+argparse==1.4.0
+pyspellchecker==0.5.4
