--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,34 @@ textblob==0.15.3
 validators==0.15.0
 ipaddress==1.0.23
 argparse==1.4.0
+py>=1.8.2
+soupsieve>=2.0
+pip>=20.1.1
+cryptography>=2.9.2
+nltk>=3.5
+numpy>=1.18.4
+click>=7.1.2
+tqdm>=4.46.0
+regex>=2020.4.4
+pyparsing>=2.4.7
+toml>=0.10.1
+setuptools>=46.1.3
+isort>=4.3.21
+appdirs>=1.4.4
+pyflakes>=2.2.0
+gevent>=20.5.2
+cffi>=1.14.0
+greenlet>=0.4.15
+joblib>=0.14.1
+astroid>=2.4.2
+mccabe>=0.6.1
+pluggy>=0.13.1
+packaging>=20.4
+six>=1.14.0
+wrapt>=1.12.1
+certifi>=2020.4.5.1
+chardet>=3.0.4
+idna>=2.9
+urllib3>=1.25.9
+decorator>=4.4.2
 pyspellchecker==0.5.4
