Extract is homoglyph domain valid (#18)
* - Extract _is_homoglyph_domain_valid.

Co-authored-by: yuriarthf <yuriarthf@protonmail.com>
Co-authored-by: rozhn0v <rozhnov@alignedresearch.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-backup/*
-data/*
-Python_3.8/*
-.idea/*
-perfomance/*
-**/__pycache__/*
+backup/
+data/
+Python_3.8/
+.idea/
+**/__pycache__/
+perfomance/
 phishing.log
 env
 MANIFEST
