show coverage report

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,13 @@ deps = -rrequirements.txt
        pylint
        mypy
        pytest
+       coverage
 
-commands = python -m pytest
+commands = coverage run --source=idn_domain_names -m pytest
            flake8 {toxinidir}/idn_domain_names
            flake8 {toxinidir}/tests
            mypy --config-file {toxinidir}/mypy.ini {toxinidir}/idn_domain_names
            mypy --config-file {toxinidir}/mypy.ini {toxinidir}/tests
            pylint --rcfile={toxinidir}/.pylint.cfg idn_domain_names
            pylint --rcfile={toxinidir}/.pylint.cfg tests
+           coverage report
