Fix idna exceptions (#32)
* - Add jenkins_pipeline dir to .gitignore.

* - Add UnicodeError Exception to ignore domains that doesn't comply with BiDi rules of IDNA2008.
- Concatenate '.' to domains that do not have it, in the end of the string.

* - Add logging to parse_targets_source UnicodeError exception.

* - Fixed a problem with unicode domain generation.

Co-authored-by: yuriarthf <yuriarthf@protonmail.com>
Co-authored-by: rozhn0v <rozhnov@alignedresearch.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37
+envlist = py37,py38
 
 [testenv]
 deps = -rrequirements.txt
@@ -16,4 +16,4 @@ commands = coverage run --source=idn_domain_names -m pytest
            mypy --config-file {toxinidir}/mypy.ini {toxinidir}/tests
            pylint --rcfile={toxinidir}/.pylint.cfg idn_domain_names
            pylint --rcfile={toxinidir}/.pylint.cfg tests
-           coverage report
+           coverage report -m
